kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"DB_HOST","value":"database"},{"name":"DB_USER","value":"root"},{"name":"DB_PASSWORD","value":"rootpassword"},{"name":"DB_NAME","value":"microservices_app"}],"image":"indikaeranga06/backend:latest","name":"backend","ports":[{ [...]
  creationTimestamp: "2024-11-27T20:01:07Z"
  generation: 5
  name: backend
  namespace: default
  resourceVersion: "54654"
  uid: 5dfa1cf6-b908-410b-a919-fde696c5f823
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: database
        - name: DB_USER
          value: root
        - name: DB_PASSWORD
          value: rootpassword
        - name: DB_NAME
          value: microservices_app
        image: indikaeranga06/backend:latest
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-11-29T12:16:35Z"
    lastUpdateTime: "2024-11-29T12:16:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-11-29T07:26:49Z"
    lastUpdateTime: "2024-11-29T12:26:49Z"
    message: ReplicaSet "backend-6ffb67ff69" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
